--- a/app/assets/styles/base/_container.css
+++ b/app/assets/styles/base/_container.css
@@ -1,6 +1,6 @@
 .container{
-	max-width: 1140px;
+	max-width: 71.25rem;
 	margin: 0 auto;
-	padding-left: 15px;
-	padding-right: 15px;
+	padding-left: 0.9375rem;
+	padding-right: 0.9375rem;
 }
