--- a/app/assets/styles/modules/_nav-bar.css
+++ b/app/assets/styles/modules/_nav-bar.css
@@ -1,5 +1,5 @@
 .navbar{
-	height: 75px;
+	height: 4.3875rem;
 	display: grid;
 	grid-auto-columns: 1fr 2fr;
 	grid-template-rows:auto ;
@@ -39,7 +39,7 @@
 		}
 
 		& ul li{
-			margin-right: 15px;
+			margin-right: 0.9375rem;
 
 			&:last-type{
 				margin-right: 0px;
@@ -49,8 +49,8 @@
 
 		&__mobile-manu{
 			position: absolute;
-			top: 20px;
-			right: 20px;
+			top: 1.25rem;
+			right: 1.25rem;
 			visibility: visible;
 
 			@mixin atMedium{
