--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -4,6 +4,8 @@
 @import "base/_mixins";
 @import "base/_container";
 @import "lib/font-awesome";
+@import "lib/flexslider";
 @import "modules/_large-hero";
 @import "modules/_nav-bar";
+@import "modules/_services";
 
