--- a/app/assets/styles/modules/_services.css
+++ b/app/assets/styles/modules/_services.css
@@ -1,3 +1,122 @@
-.service{
-	
+.services{
+	display: grid;
+	grid-gap: 0 10px;
+	grid-template-columns: auto;
+	grid-template-rows: auto auto auto auto auto auto auto;
+	grid-template-areas: 
+	"main"
+	"left01 "
+	"left02 "
+	"left03 "
+	"right01"
+	"right02"
+	"right03"
+	;
+
+		@mixin atLarge	{
+			grid-template-columns: 2fr 2fr;
+			grid-template-rows: auto auto auto auto;
+			grid-template-areas: 
+			"main ."
+			"left01 right01"
+			"left02 right02"
+			"left03 right03";
+		}
+
+	&__main{
+		grid-area: main;
+
+		& h1{
+			font-size: 2.1rem;
+			position: relative;
+			margin-bottom: 1.9rem;
+
+		}
+		&::after{
+
+			@mixin atLarge{
+			position: absolute;
+			bottom: -155px;
+			width: 50px;
+			height: 2px;
+			background-color: red;
+			content: " ";
+
+			}
+			
+		}
+		& p{
+			font-size: 1.4rem;
+			font-weight: 200;
+			width: 100%;
+
+
+		}
+
+	}
+
+	&__sub-heading{
+		color: $siteRed;
+		font-size: 1.5rem;
+		font-weight: 200;
+
+	}
+
+	&__icon-larger{
+		font-size: 3rem;
+		position: relative;
+		top: 0;
+		right: 0;
+
+		@mixin atSmall{
+			font-size: 3rem;
+			position: relative;
+			top: 70px;
+			right: 80px;
+			width: 100%;
+			margin: 0 auto;
+		}
+	}
+
+	&__text{
+		font-size: 1.1rem;
+		line-height: 1.5;
+
+	}
+	&__left01{
+		grid-area: left01;
+		margin-right: 0;
+
+		@mixin atLarge{
+		margin-right: 100px;
+		}
+	}
+	&__left02{
+		grid-area: left02;
+		margin-right: 0;
+
+		@mixin atSmall{
+		margin-right: 100px;
+
+
+		}
+	}
+	&__left03{
+		grid-area: left03;
+		margin-right: 0;
+
+		@mixin atSmall{
+		margin-right: 100px;
+
+		}
+	}
+	&__right01{
+		grid-area: right01;
+	}
+	&__right02{
+		grid-area: right02;
+	}
+	&__right03{
+		grid-area: right03;
+	}
 }
