--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -9,4 +9,8 @@
 @import "modules/_nav-bar";
 @import "modules/_services";
 @import "modules/_portfolio";
+@import "modules/_faqs";
+@import "modules/_about";
+@import "modules/_footer";
+@import "modules/_up";
 
