--- a/app/assets/styles/base/_global.css
+++ b/app/assets/styles/base/_global.css
@@ -1,12 +1,14 @@
 *{
 	box-sizing: border-box;
+
 }
 
 
 body{
 	font-family: 'Roboto' , sans-serif;
 	color: #333;
-
+	background-color: $body;
+	
 }
 
 
