--- a/app/assets/styles/modules/_portfolio.css
+++ b/app/assets/styles/modules/_portfolio.css
@@ -1,5 +1,41 @@
 .portfolio{
+	overflow: hidden;
 	clear: both;
+
+	&__main{
+		padding-top: 50px;
+
+		& p{
+			width: 350px;
+			margin: 0 auto;
+			text-align: center;
+
+			@mixin atMedium{
+				width: 700px;
+			}
+
+		}
+	}
+
+	&--center{
+		text-align: center;
+		width: 100%;
+		
+	}
+
+	&__images > img{
+		margin-top: 40px;
+		lost-column: 1/;
+		border-radius: 10px;
+
+		@mixin atMedium{
+		lost-column: 1/2;
+		}
+
+		@mixin atLarge{
+			lost-column: 1/3;
+		}
+	}
 	
 
 }
