--- a/app/assets/styles/modules/_faqs.css
+++ b/app/assets/styles/modules/_faqs.css
@@ -1,53 +1,53 @@
 .faqs{
+	clear:both;
 	overflow: hidden;
+
 	&__content{
-		margin-top: 20px;
-		
-		
+			margin-top: 20px;
+			background-color: $body;
 	}
 
 	&__quiz{
 		lost-column: 1;
 		margin-bottom: 20px;
 		position: relative;
+	
 
-		@mixin atMedium{
-			lost-column: 1/2;
-		}
+			@mixin atMedium{
+				lost-column: 1/2;
+			}
 
 		& h3 {
 			background-color: #fff;
-			color: rgba($siteRed, .8);
+			color: rgba($black, 0.8);
 			font-weight: 200;
 			padding-left: 20px;
 			border-bottom: 1px solid $body;
 			padding-bottom: 20px;
 			padding-top: 20px;
 			margin-bottom: 0;
+			cursor: pointer;
+
+			&:active{
+				color:rgba($siteRed, .8);
+			}
 		}
 
 		& p{
 			margin-top: 0;
 			background-color: #fff;
-			color: rgba(#000 .7);
+			color: rgba($black, 0.7);
 			line-height: 1.5;
 			padding: 15px;
 
 		}
 	}
 
-	&__icon{
-	 	position: relative; 
-	 	top: 40px;
-		left: 500px;
-	 	right: 200px;
-		color: #000;
-		font-weight: lighter;
 
 
-		
+}
 
-
-	}
+.hidden{
+	display: none;
 
 }
