--- a/app/assets/styles/modules/_large-hero.css
+++ b/app/assets/styles/modules/_large-hero.css
@@ -1,36 +1,3 @@
-/* .large-hero{
-	margin-bottom: 10px;
-	&__img-container{
-		display: block;
-		width: 100%;
-		max-height: 100%;
-		background-size: cover;
-	}
-
-	&__text{
-		display: flex;
-		flex-flow: column wrap;
-		justify-content: center;
-		align-items: center;
-		transform: translateY(-200%);
-
-		& h2{
-			font-size: 3rem;
-			color: #fff;
-			font-weight: 200;
-		}
-
-		& a {
-			background-color: $siteRed;
-			padding: 1.3rem;
-			border: 1px solid $siteRed;
-			border-radius: 5px;
-			color: #ffffff;
-		}
-	}
-} */
-
-
 .large-hero{
 	overflow: hidden;
 	&__text{
@@ -48,11 +15,12 @@
 
 		@mixin atLarge{
 		width: 1150px;
-		transform: translateY(-350%);
+		transform: translateY(-400%);
 		}
 	}
 
 	&__heading{
+		animation-duration: 2s;
 		font-size: 1.2rem;
 		font-weight: 300;
 		color: #fff;
@@ -67,6 +35,7 @@
 	}
 
 	&__btn{
+		
 		background-color: rgba($siteRed , .8);
 		color: #fff;
 		padding: 10px;
